# stac

./: .gitignore  Dockerfile  LICENSE  README.md  STAC Example.ipynb  gen-all-release-stac.py  gen-bbox-per-parquet.py  gen-data-release-stac.py  gen-manifest.py  gen-pmtiles-catalog-stac.py  gen-pmtiles-catalog.py  gen-stac.py  manifest.geojson  pyproject.toml  requirements.txt  sample.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish-docker.yaml  publish-pypi.yml  publish-stac.yaml  publish-stack.yaml  publish.yaml  staging.yaml  staging_cleanup.yaml
build_pmtiles/2024-09-18/addresses.pmtiles/: addresses.pmtiles.json
build_pmtiles/2024-09-18/buildings.pmtiles/: buildings.pmtiles.json
build_pmtiles/2024-10-23/base.pmtiles/: base.pmtiles.json
build_pmtiles/2024-10-23/buildings.pmtiles/: buildings.pmtiles.json
examples/: registry_manifest.py
releases/pmtiles/: catalog.json
releases/pmtiles/2024-07-22/: collection.json
releases/pmtiles/2024-07-22/addresses.pmtiles/: addresses.pmtiles.json
releases/pmtiles/2024-07-22/base.pmtiles/: base.pmtiles.json
releases/pmtiles/2024-07-22/buildings.pmtiles/: buildings.pmtiles.json
releases/pmtiles/2024-07-22/divisions.pmtiles/: divisions.pmtiles.json
releases/pmtiles/2024-07-22/places.pmtiles/: places.pmtiles.json
releases/pmtiles/2024-07-22/transportation.pmtiles/: transportation.pmtiles.json
releases/pmtiles/2024-08-20/addresses.pmtiles/: addresses.pmtiles.json
releases/pmtiles/2024-08-20/base.pmtiles/: base.pmtiles.json
releases/pmtiles/2024-08-20/buildings.pmtiles/: buildings.pmtiles.json
releases/pmtiles/2024-08-20/divisions.pmtiles/: divisions.pmtiles.json
releases/pmtiles/2024-08-20/places.pmtiles/: places.pmtiles.json
releases/pmtiles/2024-08-20/transportation.pmtiles/: transportation.pmtiles.json
releases/pmtiles/2024-09-18/: collection.json
releases/pmtiles/2024-09-18/base.pmtiles/: base.pmtiles.json
releases/pmtiles/2024-09-18/divisions.pmtiles/: divisions.pmtiles.json
releases/pmtiles/2024-09-18/places.pmtiles/: places.pmtiles.json
releases/pmtiles/2024-09-18/transportation.pmtiles/: transportation.pmtiles.json
releases/pmtiles/2024-10-23/: collection.json
releases/pmtiles/2024-10-23/addresses.pmtiles/: addresses.pmtiles.json
releases/pmtiles/2024-10-23/divisions.pmtiles/: divisions.pmtiles.json
releases/pmtiles/2024-10-23/places.pmtiles/: places.pmtiles.json
releases/pmtiles/2024-10-23/transportation.pmtiles/: transportation.pmtiles.json
releases/stac/2025-01-22.0/: catalog.json
releases/stac/2025-01-22.0/base/: catalog.json
releases/stac/2025-01-22.0/buildings/: catalog.json
releases/stac/2025-01-22.0/transportation/: catalog.json
releases/stac/2025-02-19.0/: catalog.json
releases/stac/2025-03-19.1/: catalog.json
releases/stac/2025-03-19.1/addresses/: catalog.json
releases/stac/2025-04-23.0/: catalog.json
sample_stac/: catalog.json  overture_data_release_2024-09-18.0.json
sample_stac/addresses/: addresses.json
sample_stac/addresses/address/: address.json  collection.json
sample_stac/addresses/address/00000/: 00000.json
sample_stac/addresses/address/00001/: 00001.json
sample_stac/addresses/address/00002/: 00002.json
sample_stac/addresses/address/00003/: 00003.json
sample_stac/addresses/address/00004/: 00004.json
sample_stac/addresses/address/00005/: 00005.json
sample_stac/addresses/address/00006/: 00006.json
sample_stac/base/: base.json
sample_stac/base/infrastructure/: infrastructure.json
sample_stac/base/infrastructure/00000/: 00000.json
sample_stac/base/infrastructure/00001/: 00001.json
sample_stac/base/infrastructure/00002/: 00002.json
sample_stac/base/infrastructure/00003/: 00003.json
sample_stac/base/infrastructure/00004/: 00004.json
sample_stac/base/infrastructure/00005/: 00005.json
sample_stac/base/infrastructure/00006/: 00006.json
sample_stac/base/land/: land.json
sample_stac/base/land/00000/: 00000.json
sample_stac/base/land/00001/: 00001.json
sample_stac/base/land/00002/: 00002.json
sample_stac/base/land/00003/: 00003.json
sample_stac/base/land/00004/: 00004.json
sample_stac/base/land/00005/: 00005.json
sample_stac/base/land/00006/: 00006.json
sample_stac/base/land/00007/: 00007.json
sample_stac/base/land_cover/: collection.json  land_cover.json
sample_stac/base/land_use/: land_use.json
sample_stac/base/water/: collection.json  water.json
sample_stac/buildings/: buildings.json
sample_stac/buildings/building/: building.json
sample_stac/buildings/building_part/: building_part.json  collection.json
sample_stac/divisions/: catalog.json  divisions.json
sample_stac/divisions/division/: division.json
sample_stac/divisions/division_area/: division_area.json
sample_stac/divisions/division_boundary/: collection.json  division_boundary.json
sample_stac/geoparquet/base/: catalog.json
sample_stac/places/: catalog.json  places.json
sample_stac/places/place/: collection.json  place.json
sample_stac/pmtiles/2024-08-20/: collection.json
sample_stac/transportation/: transportation.json
sample_stac/transportation/connector/: connector.json
sample_stac/transportation/segment/: collection.json  segment.json
src/: overture_stac.py
src/overture_stac/: __init__.py  cli.py  overture_stac.py  registry_manifest.py
tests/: __init__.py  setup_test_catalog.py  test_e2e_stac_catalog.py  test_overture_stac.py  test_process_theme_worker.py  test_registry_manifest.py
util/: gen-bbox-per-parquet.py  overture_stac.py
(+2680 files in other folders)
