[project]
name = "overture-stac"
version = "1.0.3"
description = "Generate STAC catalogs for Overture Maps Releases"
authors = [
    {name = "Overture Maps Foundation"}
]
maintainers = [
    {name = "Adam Lastowka", email = "adam@overturemaps.org"},
    {name = "Jennings Anderson", email = "jenningsa@meta.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["stac", "catalog", "overture", "geospatial", "metadata", "maps"]
dependencies = [
    "pystac>=1.8.4",
    "pyarrow>=14.0.1",
    "stac-geoparquet>=0.7.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://overturemaps.org"
Source = "https://github.com/OvertureMaps/stac"
Issues = "https://github.com/OvertureMaps/stac/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
gen-stac = "overture_stac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overture_stac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--verbose", "-W", "default"]
markers = [
    "integration: marks tests as integration tests (connects to real services)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "default",
    "ignore::DeprecationWarning:pystac.*",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B008"]

[[tool.uv.index]]
name = "overture"
url = "https://overture-pypi-505071440022.d.codeartifact.us-west-2.amazonaws.com/pypi/overture/simple/"
publish-url = "https://overture-pypi-505071440022.d.codeartifact.us-west-2.amazonaws.com/pypi/overture/"
explicit = true
